sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: type mismatch;
 found   : String
 required: Int
    v = getValeur(i+" ")
                   ^